Remove unnecessary comments from styles and magic cursor settings in index.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <link rel="stylesheet" type="text/css" href="css/plugins.css" />
 <link rel="stylesheet" type="text/css" href="css/colors.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
-<!--<link rel="stylesheet" type="text/css" href="css/dark.css" />-->
-<!--[if lt IE 9]> <script type="text/javascript" src="js/modernizr.custom.js"></script> <![endif]-->
+<!-- <link rel="stylesheet" type="text/css" href="css/dark.css" /> -->
+<!-- [if lt IE 9]> <script type="text/javascript" src="js/modernizr.custom.js"></script> <![endif] -->
 <!-- /STYLES -->
 
 </head>
@@ -54,7 +54,7 @@
 				<!-- <li><a class="green" href="#"></a></li> -->
 				<!-- <li><a class="brown" href="#"></a></li> -->
 				<li><a class="pink" href="#"></a></li>
-				<li><a class="orange" href="#"></a></li>
+				<!-- <li><a class="orange" href="#"></a></li> -->
 				<li class="bl"><a class="black" href="#"></a></li>
 				<!-- <li class="wh"><a class="white" href="#"></a></li> -->
 				<li><a class="purple" href="#"></a></li>
