--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 							<li class="grid-item wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
 								<div class="list_inner">
 									<img class="svg" src="img/svg/code.svg" alt="" />
-									<h3 class="title">Desenvolvimento</h3>
+									<h3 class="title">Agilidade</h3>
 								</div>
 							</li>
 							<li class="grid-item wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
